fastapi-app/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapi-app-dep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fastapi-app
  template:
    metadata:
      labels:
        app: fastapi-app
    spec:
      volumes:
        - name: shared-fastapi-volume
          persistentVolumeClaim:
            claimName: fastapi-pv-claim
      containers:
        - name: fastapi-app
          image: fastapi-app:0.7
          volumeMounts:
          - name: shared-fastapi-volume
            mountPath: /usr/fastapi-app/
