fastapi-app/manifests/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fastapi-svc
spec:
  selector:
    app: fastapi-app
  ports:
    - protocol: TCP
      port: 2347
      targetPort: 8000
  type: ClusterIP
