fastapi-app/manifests/fastapi-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
spec:
  rules:
  - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-svc
                port:
                  number: 2347
          - path: /show
            pathType: Prefix
            backend:
              service:
                name: fastapi-svc
                port:
                  number: 2347
          - path: /download
            pathType: Prefix
            backend:
              service:
                name: fastapi-svc
                port:
                  number: 2347
          - path: /downloaded_images
            pathType: Prefix
            backend:
              service:
                name: fastapi-svc
                port:
                  number: 2347
          - path: /photo
            pathType: Prefix
            backend:
              service:
                name: fastapi-svc
                port:
                  number: 2347
